--- a/scss/shared/_base.scss
+++ b/scss/shared/_base.scss
@@ -11,5 +11,5 @@ body {
 .main {
   display: flex;
   justify-content: center;
-  margin-bottom: rem(110);
+  margin-bottom: rem(30);
 }
